Some error on client side

--- a/bluetoothmethod/Web/main.html
+++ b/bluetoothmethod/Web/main.html
@@ -537,3 +537,7 @@
   </script>
 </body>
 </html>
+
+Error 
+main.html:307 Connection failed: NotFoundError: No Characteristics matching UUID 19b10003-e8f2-537e-4f6c-d104768a1214 found in Service with UUID 19b10000-e8f2-537e-4f6c-d104768a1214.
+﻿
